--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<h1>TODO List</h1>
 <input type="text" id="input">
 <button onclick="addTodo()">Add TODO</button>
-
+<table>
 <ul id="list">
 </ul>
+</table>
 <script src="scripts.js"></script>
 </body>
 </html>
