--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <title>TODO list</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body>
-<h1>TODO List</h1>
-<input type="text" id="input">
-<button onclick="addTodo()">Add TODO</button>
-<table>
-<ul id="list">
-</ul>
-</table>
-<script src="scripts.js"></script>
+<div class="container">
+    <h1>TODO List</h1>
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Text here" aria-label="Text" id="input" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" onclick="addTodo()" type="button">Add TODO</button>
+        </div>
+    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">My List</th>
+            <th class="th"></th>
+        </tr>
+        </thead>
+        <tbody id="list">
+        </tbody>
+    </table>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
