--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body class="body">
 <div class="container">
     <h1>TODO List</h1>
+    <button class="btn btn-primary" onclick="loadTodo()" type="button">Load TODO</button>
+    <hr>
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Text here" aria-label="Text" id="input" aria-describedby="basic-addon2">
         <div class="input-group-append">
