--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="text" class="form-control" placeholder="Text here" aria-label="Text" id="input" aria-describedby="basic-addon2">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" onclick="addTodo()" type="button">Add TODO</button>
+            <button class="btn btn-success" onclick="clearList()" type="button">Clear</button>
         </div>
     </div>
     <table class="table">
