--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="btn btn-primary" onclick="loadTodo()" type="button">Load TODO</button>
     <hr>
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Text here" aria-label="Text" id="input" aria-describedby="basic-addon2">
+        <input type="text" class="form-control" placeholder="Text here" aria-label="Text" id="input" >
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" onclick="addTodo()" type="button">Add TODO</button>
             <button class="btn btn-success" onclick="clearList()" type="button">Clear</button>
